Groovy 3.0.8 and picocli 4.6.1

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
     <jse.target>11</jse.target>
     <maven.compiler.source>${jse.target}</maven.compiler.source>
     <commonmark.version>0.17.1</commonmark.version>
+    <groovy.version>3.0.8</groovy.version>
     <jetty.version>9.4.39.v20210325</jetty.version>
     <kotlin.version>1.5.0</kotlin.version>
     <log4j2.version>2.14.1</log4j2.version>
@@ -83,54 +84,14 @@
         <version>${ball-util.version}</version>
       </dependency>
       <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark-ext-autolink</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark-ext-gfm-strikethrough</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark-ext-gfm-tables</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark-ext-heading-anchor</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark-ext-image-attributes</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark-ext-ins</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark-ext-task-list-items</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.commonmark</groupId>
-        <artifactId>commonmark-ext-yaml-front-matter</artifactId>
-        <version>${commonmark.version}</version>
-      </dependency>
-      <dependency>
         <groupId>com.github.jknack</groupId>
         <artifactId>handlebars</artifactId>
         <version>4.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>info.picocli</groupId>
+        <artifactId>picocli</artifactId>
+        <version>4.6.1</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.resolver</groupId>
@@ -186,6 +147,51 @@
         <groupId>org.apache.spark</groupId>
         <artifactId>spark-sql_${scala.binary.version}</artifactId>
         <version>${spark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark</artifactId>
+        <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark-ext-autolink</artifactId>
+        <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark-ext-gfm-strikethrough</artifactId>
+        <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark-ext-gfm-tables</artifactId>
+        <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark-ext-heading-anchor</artifactId>
+        <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark-ext-image-attributes</artifactId>
+        <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark-ext-ins</artifactId>
+        <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark-ext-task-list-items</artifactId>
+        <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.commonmark</groupId>
+        <artifactId>commonmark-ext-yaml-front-matter</artifactId>
+        <version>${commonmark.version}</version>
       </dependency>
       <dependency>
         <groupId>org.jfree</groupId>
@@ -259,48 +265,16 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark-ext-autolink</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark-ext-gfm-strikethrough</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark-ext-gfm-tables</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark-ext-heading-anchor</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark-ext-image-attributes</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark-ext-ins</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark-ext-task-list-items</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.commonmark</groupId>
-      <artifactId>commonmark-ext-yaml-front-matter</artifactId>
-    </dependency>
-    <dependency>
       <groupId>com.github.jknack</groupId>
       <artifactId>handlebars</artifactId>
     </dependency>
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>info.picocli</groupId>
+      <artifactId>picocli</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
@@ -345,6 +319,42 @@
     <dependency>
       <groupId>org.codehaus.groovy</groupId>
       <artifactId>groovy-jsr223</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark-ext-autolink</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark-ext-gfm-strikethrough</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark-ext-gfm-tables</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark-ext-heading-anchor</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark-ext-image-attributes</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark-ext-ins</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark-ext-task-list-items</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.commonmark</groupId>
+      <artifactId>commonmark-ext-yaml-front-matter</artifactId>
     </dependency>
     <dependency>
       <groupId>org.freemarker</groupId>
