--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ##########################################################################
+  Ganymede
+  %%
+  Copyright (C) 2021 Allen D. Ball
+  %%
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+       http://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License.
+  ##########################################################################
+  -->
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
@@ -14,13 +33,23 @@
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
     <version>20210602.1</version>
-    <relativePath>../ball/parent/pom.xml</relativePath>
+    <relativePath/>
   </parent>
   <organization>
     <name><![CDATA[<a href="mailto:ball@hcf.dev">Allen D. Ball</a>]]></name>
     <url>https://github.com/allen-ball/ganymede</url>
   </organization>
   <inceptionYear>2021</inceptionYear>
+  <licenses>
+    <license>
+      <name>Apache-2.0</name>
+      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <scm>
+    <url>https://github.com/allen-ball/ganymede</url>
+  </scm>
   <distributionManagement>
     <downloadUrl>https://maven.pkg.github.com/allen-ball/ganymede/</downloadUrl>
     <repository>
@@ -40,15 +69,21 @@
       <name>hcf.dev RELEASE Repository</name>
       <url>https://repo.hcf.dev/maven/release/</url>
       <layout>default</layout>
+      <releases>
+        <enabled>true</enabled>
+        <updatePolicy>never</updatePolicy>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
     </repository>
   </repositories>
-  <licenses>
-    <license>
-      <name>Apache-2.0</name>
-      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>repo.hcf.dev-RELEASE</id>
+      <url>https://repo.hcf.dev/maven/release/</url>
+    </pluginRepository>
+  </pluginRepositories>
   <properties>
     <license.skipUpdateProjectLicense>true</license.skipUpdateProjectLicense>
     <jse.target>11</jse.target>
