Set ${maven-dependency-plugin.version} to 3.2.0.

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,8 @@
     <spark.version>3.1.2</spark.version>
     <tablesaw.version>0.38.2</tablesaw.version>
 
+    <maven-dependency-plugin.version>3.2.0</maven-dependency-plugin.version>
+
     <ball-api.version>${ball-parent.version}</ball-api.version>
     <javadoc-offline-locations>${settings.localRepository}/javadoc-offline-locations</javadoc-offline-locations>
     <javadoc.io>https://javadoc.io/doc/</javadoc.io>
