--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
   <parent>
     <groupId>ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>1.1.0.20210614</version>
+    <version>1.2.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <dependencies>
