Moved id* and display-name* property default values to resource file.

--- a/kernel/src/main/resources/application-install.properties
+++ b/kernel/src/main/resources/application-install.properties
@@ -1,3 +1,10 @@
 # application-install.properties
 
 spring.main.web-application-type: NONE
+
+id-prefix:
+id: ganymede-${project.version}-java-${java.specification.version}
+id-suffix:
+display-name-prefix:
+display-name: Ganymede ${project.version} (Java ${java.specification.version})
+display-name-suffix:
