--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
     <maven.compiler.source>${jse.target}</maven.compiler.source>
 
     <commonmark.version>0.17.2</commonmark.version>
+    <graal-sdk.version>0.33</graal-sdk.version>
     <jackson-bom.version>2.10.5.20201202</jackson-bom.version>
     <scala.binary.version>2.12</scala.binary.version>
     <scala.version>${scala.binary.version}.10</scala.version>
@@ -180,6 +181,11 @@
         <groupId>org.commonmark</groupId>
         <artifactId>commonmark-ext-yaml-front-matter</artifactId>
         <version>${commonmark.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.graalvm</groupId>
+        <artifactId>graal-sdk</artifactId>
+        <version>${graal-sdk.version}</version>
       </dependency>
       <dependency>
         <groupId>org.jfree</groupId>
@@ -435,11 +441,16 @@
       <artifactId>tablesaw-jsplot</artifactId>
       <scope>provided</scope>
     </dependency>
-    <!-- Always excluded -->
+    <!-- Always excluded from shaded JAR -->
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.17</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm</groupId>
+      <artifactId>graal-sdk</artifactId>
       <scope>provided</scope>
     </dependency>
   </dependencies>
