Define ${kernel.version} separate from ${project.version} consisting of only the major, minor, and incremental components.

--- a/kernel/src/main/resources/application.properties
+++ b/kernel/src/main/resources/application.properties
@@ -5,6 +5,8 @@ project.artifactId: @project.artifactId@
 project.version: @project.version@
 project.packaging: @project.packaging@
 
+kernel.version: @project.majorVersion@.@project.minorVersion@.@project.incrementalVersion@
+
 spring.main.banner-mode: OFF
 spring.main.headless: true
 spring.main.log-startup-info: false
