--- a/kernel/src/main/resources/application-install.properties
+++ b/kernel/src/main/resources/application-install.properties
@@ -3,8 +3,8 @@
 spring.main.web-application-type: NONE
 
 id-prefix:
-id: ganymede-${project.version}-java-${java.specification.version}
+id: ganymede-${kernel.version}-java-${java.specification.version}
 id-suffix:
 display-name-prefix:
-display-name: Ganymede ${project.version} (Java ${java.specification.version})
+display-name: Ganymede ${kernel.version} (Java ${java.specification.version})
 display-name-suffix:
