--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
   <modelVersion>4.0.0</modelVersion>
   <name>Ganymede GitHub Pages</name>
   <groupId>ganymede</groupId>
-  <artifactId>ganymede-kernel-gh-pages</artifactId>
+  <artifactId>ganymede-gh-pages</artifactId>
   <packaging>pom</packaging>
   <parent>
     <groupId>ganymede</groupId>
     <artifactId>parent</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
   <dependencies>
@@ -38,6 +38,10 @@
       <groupId>ganymede</groupId>
       <artifactId>ganymede-kernel</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>ball</groupId>
+      <artifactId>ball-util</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.inject</groupId>
@@ -52,8 +56,36 @@
       <artifactId>commons-lang3</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.spark</groupId>
+      <artifactId>spark-sql_${scala.binary.version}</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jfree</groupId>
+      <artifactId>jfreechart</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.knowm.xchart</groupId>
+      <artifactId>xchart</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-compiler</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.scala-lang</groupId>
+      <artifactId>scala-library</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>tech.tablesaw</groupId>
+      <artifactId>tablesaw-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>tech.tablesaw</groupId>
+      <artifactId>tablesaw-jsplot</artifactId>
     </dependency>
   </dependencies>
   <build>
