--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
   <parent>
     <groupId>ball</groupId>
     <artifactId>parent</artifactId>
-    <version>20210616-SNAPSHOT</version>
+    <version>20210622.0</version>
     <relativePath/>
   </parent>
   <organization>
